tests/snapshots/examples_fixtures/flow__all_phase3.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/flow/all_phase3.flx
== compile ==
failed (compile)
== diagnostics ==
error[E013]: Module Not Imported

Module `Flow` is not imported.

  examples/flow/all_phase3.flx:5:1
  |
5 | Flow.print("== Flow directives smoke ==");
  | ^^^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Flow`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.


error[E013]: Module Not Imported

Module `Flow` is not imported.

  examples/flow/all_phase3.flx:6:1
  |
6 | Flow.print("len([1,2,3]) = " + to_string(len([1, 2, 3])));
  | ^^^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Flow`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.


error[E013]: Module Not Imported

Module `Flow` is not imported.

  examples/flow/all_phase3.flx:12:3
   |
12 |   Flow.print("local len(xs) = " + to_string(len(xs)));
   |   ^^^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Flow`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.


error[E013]: Module Not Imported

Module `Flow` is not imported.

  examples/flow/all_phase3.flx:13:3
   |
13 |   Flow.print("Flow.len(xs) = " + to_string(Flow.len(xs)));
   |   ^^^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Flow`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.

Found 4 errors.
== stdout ==
<not executed>
