tests/snapshots/examples_fixtures/flow__base_directives_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/flow/base_directives_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
