tests/snapshots/examples_fixtures/flow__base_duplicate_except_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/flow/base_duplicate_except_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E012]: Unknown Module Member

Module `Flow` has no member named `print`.

  examples/flow/base_duplicate_except_error.flx:7:5
  |
7 |     Flow.print("unreachable")
  |     ^^^^^^^^^^

Hint:
  Check the module's public members or import the correct module.
== stdout ==
<not executed>
