tests/snapshots/examples_fixtures/flow__base_shadowing_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/flow/base_shadowing_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
